updated the whole application as of 21-05-2019

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>The Bachelors</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
@@ -25,7 +28,6 @@
  		<h1>Welcome to The Bachelors!</h1>
 		<a href="/locations" class="btn btn-lg btn-success">Let's Dig In!</a>
     </div>
-    
     <ul class="slideshow">
       <li></li>
       <li></li>
