--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,18 +1,72 @@
-.thumbnail img{
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+.container .text-muted {
+  margin: 20px 0;
+}
+
+/* Thumbnail styles */
+.thumbnail img {
     width: 100%;
 }
-.thumbnail{
-    padding:0px;
+
+.thumbnail {
+    padding: 0;
 }
-.thumbnail .caption-full{
+
+.thumbnail .caption-full {
     padding: 9px;
 }
-.delete-form{
-    display: inline;
+/* Location show page delete button */
+.delete-form {
+	display: inline-block;
 }
-body{
-background: #9796f0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #fbc7d4, #9796f0) fixed;  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #fbc7d4, #9796f0) fixed; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-padding-top: 70px;    
-}
+/*body{*/
+/*background: #9796f0;*/
+/*background: -webkit-linear-gradient(to bottom, #fbc7d4, #9796f0) fixed;*/
+/*background: linear-gradient(to bottom, #fbc7d4, #9796f0) fixed;*/
+/*padding-top: 70px;    */
+/*}*/
