--- a/views/locations/Index.ejs
+++ b/views/locations/Index.ejs
@@ -1,28 +1,32 @@
 <% include ../partials/header %>
-    <div class="container">
+    <header class="jumbotron">
+        <div class="container">
+            <h1>Welcome To The Bachelors!</h1>
+            <p>View our hand-picked Locations from all over the country!</p>
+            <% if(currentUser && currentUser.isAdmin){ %>
+                <p><a class="btn btn-primary btn-lg" href="/locations/new">Add New Location</a></p>
+            <% } %>
+            <p>
+                <form action="/locations" method="GET" class="form-inline" id="location-search">
+                    <div class="form-group">
+                        <input type="text" name="search" placeholder="Location search..." class="form-control">
+                    </div>
+                </form>
+            </p>
+        </div>
+    </header>
         
-        <header class="jumbotron">
-            <div class="container">
-                <h1>Welcome To The Bachelors</h1>
-                <p>View our hand-picked Locations from all over the country!</p>
-                <p><a class="btn btn-primary btn-lg" href="/locations/new">Add New Location</a><p>
-            </div>
-        </header>
-        
-        <div class="row text-center" style="display:flex; flex-wrap:wrap">    
-            <% locations.forEach(function(location){ %>
-                <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail">
-                        <image src="<%= location.image %>">
-                        <h4><%= location.name %></h4>
-                        <p>
-                            <a href="locations/<%= location.id %>" class="btn btn-primary">More Info</a>
-                        </p>
+    <div class="row text-center" id="location-grid">    
+        <% locations.forEach(function(location){ %>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="<%= location.image %>" alt="<%= location.name %>">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= location.name %></h5>
+                        <a href="/locations/<%= location._id %>" class="btn btn-primary">More Info</a>
                     </div>
                 </div>
-            <% }); %>
-        </div>
-        <div>
-            <a href="/">Go Back To The HomePage</a>
-        </div>
+            </div>
+        <% }); %>
     </div>
+<% include ../partials/footer %>
