--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,21 +1,20 @@
 <% include ./partials/header %>
-<div class="container">
     <div class="row">
-        <h1 style="text-align:center;">Login</h1>
-        <div style="width:30%; margin: 25px auto">
-            <form action="/login" method="POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="username" name="username">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="password" placeholder="password" name="password">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary btn-lg btn-block">Submit</button>
-                </div>
-            </form>    
-            <a href="/locations">Go Back</a>
+        <div class="col-md-12">
+            <form class="form-signin" action="/login" method="POST">
+              <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+              
+              <label for="inputUsername" class="sr-only">Username</label>
+              <input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
+              
+              <label for="inputPassword" class="sr-only">Password</label>
+              <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+            <div class="form-signin">
+                <a href="/locations">Go Back</a>
+            </div>
         </div>
     </div>
-</div>
 <% include ./partials/footer %>
