--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,21 +1,35 @@
 <% include ./partials/header %>
-<div class="container">
     <div class="row">
-        <h1 style="text-align:center;">Let's get you Signed Up!</h1>
-        <div style="width:30%; margin: 25px auto">
-            <form action="/register" method="POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="username" name="username">
-                </div>
-                <div class="form-group">    
-                    <input class="form-control" type="password" placeholder="password" name="password">
-                </div>
-                <div class="form-group">    
-                    <button class="btn btn-primary btn-lg btn-block">Submit</button>
-                </div>    
+        <div class="col-md-12">
+            <form class="form-signin" action="/register" method="POST">
+                <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+                
+                <label for="inputUsername" class="sr-only">Username</label>
+                <input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
+                    
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+         
+                <label for="inputFirstname" class="sr-only">First name</label>
+                <input type="text" id="inputFirstname" class="form-control" name="firstName" placeholder="First Name" required autofocus>
+                    
+                <label for="inputLastname" class="sr-only">Last Name</label>
+                <input type="text" id="inputLastname" class="form-control" name="Lastname" placeholder="Last Name" required autofocus>
+                    
+                <label for="inputEmail" class="sr-only">E-mail</label>
+                <input type="email" id="inputEmail" class="form-control" name="email" placeholder="E-mail" required autofocus>
+                
+                <label for="inputPhone" class="sr-only">Phone</label>
+                <input type="number" id="inputPhone" class="form-control" name="phone" placeholder="Phone" required autofocus>
+                    
+                <label for="inputSecretCode" class="sr-only">Secret Code</label>
+                <input type="text" id="inputSecretCode" class="form-control" name="adminCode" placeholder="Secret Code" required autofocus>
+
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
             </form>
-            <a href="/locations">Go Back</a>
+            <div class="form-signin">
+                <a href="/locations">Go Back</a>
+            </div>
         </div>
     </div>
-</div>
 <% include ./partials/footer %>
